--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,3 +1,12 @@
 .todo{
   text-align: center;
 }
+
+#botaoDel:hover{
+  background-color: #f95454;
+}
+
+#botaoDel{
+  position: relative;
+  left: 42%;
+}
