--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
 .App {
   text-align: justify;
-  padding-left: 10px;
+  padding: 10px;
 
 }
 
+
 h1{
-  color: blue;
+  color: black;
   text-align: center;
   font-size: 60px;
-
+  background: linear-gradient(#dffaf6, #d0e7e3);
+  border-radius: 10px;
 }
 
 ul{
   border: 1px solid;
   background-color: white;
+  border-radius: 25px;
   padding: 1px;
   justify-content: center;
-  width: 80%;
 }
 
 li{
